# cabal-plan-submit

./: CHANGELOG.md  README.md  cabal-plan-submit.cabal  cabal-plan-to-github-snapshot.cabal
.github/workflows/: haskell.yml
.github/workflows  /: submit_deps.yml
app/: Main.hs
src/Hgs/: Deprecated.hs  Domain.hs  Extract.hs  Snapshot.hs  Validate.hs  Why.hs
src/Hgs/Input/: PlanJson.hs
test/: DeprecatedSpec.hs  Main.hs  PlanJsonSpec.hs  SnapshotSpec.hs  TestSupport.hs
