cabal-version:      3.0
name:               cabal-plan-submit
version:            0.1.0.1
build-type:         Simple
license:            MIT
license-file:       LICENSE

executable cabal-plan-submit
  main-is:          Main.hs
  hs-source-dirs:   app, src
  default-language: GHC2021
  other-modules:
    Hgs.Domain
    Hgs.Extract
    Hgs.Input.PlanJson
  ghc-options:      -Wall
  build-depends:
      base            >=4.16 && <5
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , text
    , vector

test-suite plan-json-test
  type:             exitcode-stdio-1.0
  main-is:          PlanJsonSpec.hs
  hs-source-dirs:   test, src
  other-modules:
      Hgs.Domain
      Hgs.Extract
      Hgs.Input.PlanJson
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:
      base            >=4.16 && <5
    , aeson
    , bytestring
    , containers
    , hspec
    , QuickCheck
    , text
    , vector
