cabal-version:      3.0
name:               cabal-plan-submit
version:            0.1.0.4
build-type:         Simple
license:            MIT
license-file:       LICENSE

executable cabal-plan-submit
  main-is:          Main.hs
  hs-source-dirs:   app, src
  default-language: GHC2021
  other-modules:
    Hgs.Deprecated
    Hgs.Domain
    Hgs.Extract
    Hgs.Snapshot
    Hgs.Validate
    Hgs.Input.PlanJson
    Paths_cabal_plan_submit
  ghc-options:      -Wall
  build-depends:
      base            >=4.16 && <5
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , text
    , time
    , vector
    , yaml

test-suite plan-json-test
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test, src
  other-modules:
      Hgs.Deprecated
      Hgs.Domain
      Hgs.Extract
      Hgs.Input.PlanJson
      Hgs.Snapshot
      Hgs.Validate
      DeprecatedSpec
      PlanJsonSpec
      SnapshotSpec
      TestSupport
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:
      base            >=4.16 && <5
    , aeson
    , bytestring
    , containers
    , hspec
    , QuickCheck
    , text
    , time
    , vector
    , yaml
